--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "wow": "wowjs#^1.1.2",
-    "Chart.js": "chartjs#^1.0.2"
+    "Chart.js": "chartjs#^1.0.2",
+    "angular": "^1.6.1"
   }
 }
