--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash.throttle": "^4.1.1",
     "marked": "^0.4.0",
     "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
@@ -99,6 +100,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^1.4.4",
     "prettier": "2.2.1"
   }
 }
