Get rid of deploy script in favour of CD

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          publish_branch: test/gh-pages
+          publish_branch: gh-pages
           cname: axelniklasson.se
