--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "npm run lint && node scripts/build.js",
+    "lint": "prettier -c --config .prettierrc.json src/**/*.js",
+    "format-js": "prettier --write .prettierrc.json src/**/*.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
