--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,8 +3,10 @@
   "tabWidth": 2,
   "trailingComma": "all",
   "singleQuote": true,
-  "jsxBracketSameLine": true,
+  "bracketSameLine": true,
   "semi": true,
-  "importOrder": ["^[./]"],
+  "importOrder": [
+    "^[./]"
+  ],
   "importOrderSeparation": true
 }
