--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "yarn lint && node scripts/build.js",
-    "lint": "prettier -c --config .prettierrc.json \"src/**/*.js",
-    "format-js": "prettier --write --config .prettierrc.json src/**/*.js",
+    "lint": "prettier -c --config .prettierrc.json \"src/**/*.js\"",
+    "format-js": "prettier --write --config .prettierrc.json \"src/**/*.js\"",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
