--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "yarn lint && node scripts/build.js",
+    "lint": "prettier -c --config .prettierrc.json \"src/**/*.js\"",
+    "format-js": "prettier --write --config .prettierrc.json \"src/**/*.js\"",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
@@ -101,6 +103,6 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^1.4.4",
-    "prettier": "2.2.1"
+    "prettier": "^2.5.1"
   }
 }
